// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ○ Preflight
Layer 1:
○ Publish:A
○ Publish:B
Layer 2: ○ CreateTag

0/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ● Preflight
Layer 1:
○ Publish:A
○ Publish:B
Layer 2: ○ CreateTag

0/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
● Publish:A
● Publish:B
Layer 2: ○ CreateTag

1/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
✓ Publish:A
✓ Publish:B
Layer 2: ✓ CreateTag

4/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
✓ Publish:A
✗ Publish:B
Layer 2: ○ CreateTag

2/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 6`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
[1m[36mWorkflow Progress[39m[22m

[2mLayer 0:[22m [32m✓ Preflight[39m
[2mLayer 1:[22m
[33m● Publish:A[39m
[90m○ Publish:B[39m
[2mLayer 2:[22m [90m○ CreateTag[39m

[2m1/4 completed (0)[22m
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > full > renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│





┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→







┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→







┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→





0/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > full > renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│





┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│●  StepC   │
└──────────┘

──→







┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│●  StepC   │
└──────────┘

──→







┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│●  StepC   │
└──────────┘

──→





1/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > full > renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



[32m┌──────────┐[39m
[32m│[39m✓  StepA   [32m│[39m
[32m└──────────┘[39m

──→

[33m┌──────────┐[39m
[33m│[39m●  StepB   [33m│[39m
[33m└──────────┘[39m

──→

[90m┌──────────┐[39m
[90m│[39m○  StepD   [90m│[39m
[90m└──────────┘[39m



[32m┌──────────┐[39m
[32m│[39m✓  StepA   [32m│[39m
[32m└──────────┘[39m

──→

[33m┌──────────┐[39m
[33m│[39m●  StepB   [33m│[39m
[33m└──────────┘[39m

──→

[90m┌──────────┐[39m
[90m│[39m○  StepD   [90m│[39m
[90m└──────────┘[39m



[32m┌──────────┐[39m
[32m│[39m✓  StepA   [32m│[39m
[32m└──────────┘[39m

──→

[33m┌──────────┐[39m
[33m│[39m●  StepB   [33m│[39m
[33m└──────────┘[39m

──→

[90m┌──────────┐[39m
[90m│[39m○  StepD   [90m│[39m
[90m└──────────┘[39m



[32m┌──────────┐[39m
[32m│[39m✓  StepA   [32m│[39m
[32m└──────────┘[39m

──→

[33m┌──────────┐[39m
[33m│[39m●  StepB   [33m│[39m
[33m└──────────┘[39m

──→

[90m┌──────────┐[39m
[90m│[39m○  StepD   [90m│[39m
[90m└──────────┘[39m

│

│





[32m┌──────────┐[39m
[32m│[39m✓  StepA   [32m│[39m
[32m└──────────┘[39m

──→

[33m┌──────────┐[39m
[33m│[39m●  StepB   [33m│[39m
[33m└──────────┘[39m

──→

[90m┌──────────┐[39m
[90m│[39m○  StepD   [90m│[39m
[90m└──────────┘[39m

│

│











[90m┌──────────┐[39m
[90m│[39m○  StepC   [90m│[39m
[90m└──────────┘[39m

──→







[32m┌──────────┐[39m
[32m│[39m✓  StepA   [32m│[39m
[32m└──────────┘[39m

──→

[33m┌──────────┐[39m
[33m│[39m●  StepB   [33m│[39m
[33m└──────────┘[39m

──→

[90m┌──────────┐[39m
[90m│[39m○  StepD   [90m│[39m
[90m└──────────┘[39m

│

│











[90m┌──────────┐[39m
[90m│[39m○  StepC   [90m│[39m
[90m└──────────┘[39m

──→







[32m┌──────────┐[39m
[32m│[39m✓  StepA   [32m│[39m
[32m└──────────┘[39m

──→

[33m┌──────────┐[39m
[33m│[39m●  StepB   [33m│[39m
[33m└──────────┘[39m

──→

[90m┌──────────┐[39m
[90m│[39m○  StepD   [90m│[39m
[90m└──────────┘[39m

│

│











[90m┌──────────┐[39m
[90m│[39m○  StepC   [90m│[39m
[90m└──────────┘[39m

──→





[2m1/4 completed (0)[22m
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > complex DAG > full > renderDagFull({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│







┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│







┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│













┌────────────────────┐
│○ Publish:@kitz/syn  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│













┌────────────────────┐
│○ Publish:@kitz/syn  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│













┌────────────────────┐
│○ Publish:@kitz/syn  │
└────────────────────┘













0/6 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > complex DAG > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ○ Preflight
Layer 1:
○ Publish:@kitz/core
○ Publish:@kitz/flo
○ Publish:@kitz/syn
Layer 2: ○ CreateTag
Layer 3: ○ PushTags

0/6 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > complex DAG > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
✓ Publish:@kitz/core
● Publish:@kitz/flo
● Publish:@kitz/syn
Layer 2: ○ CreateTag
Layer 3: ○ PushTags

2/6 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
○ Preflight
○ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

0/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
● Preflight
○ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

0/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
● Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

1/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
✓ Publish:core
✓ Publish:flo
✓ CreateTag
✓ PushTags

5/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
✗ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

1/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Step1', 'Step2', 'Step3' ], colors: true, events: [ Started { a...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
[32m✓[39m Step1
[33m●[39m Step2
[90m○[39m Step3

[2m1/3 completed (0)[22m
╚══════════════════════════════════════════════════╝"
`;
